# llm-qa-benchmark

./: .env.example  .gitignore  AGENTS.md  GUIDELINE.md  PROMPT_GUIDE.md  README.md  pyproject.toml
config/: models.toml
dashboard/: .gitignore  rxconfig.py
dashboard/qabench_dash/: __init__.py  data.py  qabench_dash.py  state.py  theme.py
datasets/bug_localization/binary_search/: buggy.py  meta.json  test_hidden.py
datasets/bug_localization/median/: buggy.py  meta.json  test_hidden.py
datasets/e2e_advanced/a11y_audit/: flow.md  meta.json
datasets/e2e_advanced/api_todos/: flow.md  meta.json
datasets/e2e_advanced/export_download/: flow.md  meta.json
datasets/e2e_advanced/fixtures_session/: flow.md  meta.json
datasets/e2e_advanced/login_suite/: flow.md  meta.json
datasets/e2e_advanced/network_outage/: flow.md  meta.json
datasets/e2e_advanced/perf_budget/: flow.md  meta.json
datasets/e2e_advanced/polling_report/: flow.md  meta.json
datasets/e2e_advanced/pom_checkout/: flow.md  meta.json
datasets/e2e_advanced/realtime_notifications/: flow.md  meta.json
datasets/e2e_repair/item_wrong_price/: broken.spec.ts  error.txt  meta.json
datasets/e2e_repair/item_wrong_url/: broken.spec.ts  error.txt  meta.json
datasets/e2e_repair/keep_page_objects/: broken.spec.ts  error.txt  meta.json
datasets/e2e_repair/report_no_wait/: broken.spec.ts  (+2 more)
docker/: README.md  node-runner.Dockerfile  playwright-runner.Dockerfile  python-runner.Dockerfile
docker/advanced-app/: app.py  docker-compose.yml
docker/webapp/: app.py  docker-compose.yml
docs/: adding-a-metric.md  adding-a-model.md
golden/: batch_01.md  batch_01_key.json  batch_01_results.md
prompts/: bug_localization.md  e2e_advanced.md  e2e_repair.md  e2e_ui.md  test_case_design.md  unit_test_gen.md
qabench/: __init__.py  aggregate.py  checkpoint.py  config.py  main.py  models.py  parsing.py  prompts.py  report.py  runner.py  score.py  types.py
qabench/llm/: __init__.py  base.py  batch.py  client.py  fake.py  judge.py  local.py  openai_compat.py  openrouter.py
qabench/sandbox/: __init__.py  docker_exec.py  local_exec.py  workdir.py
qabench/scoring/: __init__.py  context.py  e2e.py  execution.py  judges.py  localization.py  metrics.py  static_checks.py
qabench/tracks/: __init__.py  base.py  bug_localization.py  e2e_advanced.py  e2e_repair.py  e2e_ui.py  test_case_design.py  unit_test_gen.py
scripts/: build_cf_worker.sh  export_charts.py
tests/: test_batch_judge.py  test_dashboard_data.py  test_integration.py  test_llm.py  test_metrics.py  test_models.py  test_parsing.py  test_prompts.py  test_sandbox.py  test_scoring.py  test_tracks.py
(+18 files in other folders)
