[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-qa-benchmark"
version = "0.1.0"
description = "An execution-based LLM benchmark for QA & test automation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "kidby" }]
keywords = ["llm", "benchmark", "qa", "test-automation", "evaluation"]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "tenacity>=8.4",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.5",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "coverage>=7.5",
    "pandas-stubs>=2.2",
]
dashboard = [
    "reflex>=0.6",
    "plotly>=5.22",
    "kaleido",  # static PNG export of the result charts (scripts/export_charts.py)
]
judge = [
    "anthropic>=0.40",  # Anthropic-direct Message Batches API for `qabench rejudge`
]

[project.scripts]
qabench = "qabench.main:app"

[project.urls]
Homepage = "https://github.com/kidby/llm-qa-benchmark"

[tool.hatch.build.targets.wheel]
packages = ["qabench"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
show_error_codes = true
files = ["qabench", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["reflex.*", "plotly.*", "anthropic.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["qabench", "tests"]
# Dataset fixtures and the sample web app are example artefacts, not project code.
extend-exclude = ["datasets", "docker", ".web", "results"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "D"]
ignore = ["D203", "D213", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104"]
"dashboard/*" = ["D100", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests that require a working Docker daemon (deselect with -m 'not docker')",
    "live: tests that call real LLM APIs and need API keys (deselect with -m 'not live')",
]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["qabench"]
omit = ["qabench/main.py", "dashboard/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError", "\\.\\.\\."]
